modified script.js and index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title>My Website</title>
+        <title>Home - Nicole Steadman</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <div id="title">
+        <h1>Nicole Steadman</h1>
+        </div>
+        <div id="intro">
+        <p>Some text goes here. Some text goes here.</p>
+        </div>
+        <div id="picture">
+            <img
+            src="/pictures/IMG_0612.jpg"
+            alt="Picture of California"
+            >
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
